2013-04-11  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub.d/30_os-prober.in: Add onstr to entries for visual
	distinction.

2013-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix missing PVs if they don't contain "interesting" LV. Closes #38677.
	Fix few warining messages and leaks while on it.

2013-04-09  Andrey Borzenkov <arvidjaar@gmail.com>

	* autogen.sh: Use "-h", not "-f", to test for existence of symbolic
	links under grub-core/lib/libgcrypt-grub/mpi.

2013-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix ia64-efi image generation on big-endian machines. Deduplicate
	some code while on it.
	Reported by: Leif Lindholm.

2013-04-08  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/Makefile.core.def: Add kern/elfXX.c to elf module
	as extra_dist.

2013-04-08  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/term/i386/pc/console.c: Fix cursor moving algorithm.

2013-04-08  Bryan Hundven <bryanhundven@gmail.com>

	* docs/grub-dev.texi: Move @itemize after @subsection to satisfy
	texinfo-5.1.

2013-04-08  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c: Few more fixes for menu entry editor
	rendering.
	Reported by: Andrey Borzenkov <arvidjaar@gmail.com>

2013-04-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/term.c: Few more fixes for menu entry editor
	rendering.
	Reported by: Andrey Borzenkov <arvidjaar@gmail.com>

2013-04-06  Andrey Borzenkov <arvidjaar@gmail.com>

	* conf/Makefile.extra-dist (EXTRA_DIST): Add
	grub-core/lib/libgcrypt/src/gcrypt.h.in and util/import_gcrypth.sed.

2013-04-06  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-install_header: Use @PACKAGE@.mo in message catalog name
	instead of hardcoding grub.mo.

2013-04-05  Fedora Ninjas <grub2-owner@fedoraproject.org>

	* util/grub.d/30_os-prober.in: Support btrrfs linux-prober extensions.

2013-04-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Use GRUB_PROPERLY_ALIGNED_ARRAY in grub-core/disk/cryptodisk.c and