@@ -27,8 +27,6 @@
 #define SHUTDOWN_MAGIC2 0x28121969
 #define SHUTDOWN_MAGIC3 0x4321fedc
 
-#define SHUTDOWN_PORT 0x8900
-
 	.text
 	.global start, _start
 _start:
@@ -44,23 +42,7 @@ start:
 	movl $3, %ebx
 	int $SYSCALL_INT
 
-	movw $SHUTDOWN_PORT, %dx
-	movb $'S', %al
-	outb %al, %dx
-	movb $'h', %al
-	outb %al, %dx
-	movb $'u', %al
-	outb %al, %dx
-	movb $'t', %al
-	outb %al, %dx
-	movb $'d', %al
-	outb %al, %dx
-	movb $'o', %al
-	outb %al, %dx
-	movb $'w', %al
-	outb %al, %dx
-	movb $'n', %al
-	outb %al, %dx
+#include "qemu-shutdown-x86.S"
 	
 	/* shutdown.  */
 	movl $SYSCALL_RESET, %eax
