@@ -26,8 +26,6 @@
 #define SHUTDOWN_MAGIC2 0x28121969
 #define SHUTDOWN_MAGIC3 0x4321fedc
 
-#define SHUTDOWN_PORT 0x8900
-
 	.text
 	.global start, _start
 _start:
@@ -43,23 +41,7 @@ start:
 	movq $3, %rdi
 	syscall
 
-	movw $SHUTDOWN_PORT, %dx
-	movb $'S', %al
-	outb %al, %dx
-	movb $'h', %al
-	outb %al, %dx
-	movb $'u', %al
-	outb %al, %dx
-	movb $'t', %al
-	outb %al, %dx
-	movb $'d', %al
-	outb %al, %dx
-	movb $'o', %al
-	outb %al, %dx
-	movb $'w', %al
-	outb %al, %dx
-	movb $'n', %al
-	outb %al, %dx
+#include "qemu-shutdown-x86.S"
 	
 	/* shutdown.  */
 	movq $SYSCALL_RESET, %rax
