@@ -1,0 +1,9 @@
+	movl $0x80000b40, %eax
+	movw $0xcf8, %dx
+	outl  %eax, %dx
+	movl $0x1001, %eax
+	movw $0xcfc, %dx
+	outl  %eax, %dx
+	movw $0x2000, %ax
+	movw $0x1004, %dx	
+	outw  %ax, %dx
